--- a/index.html
+++ b/index.html
@@ -320,12 +320,12 @@
                         <td>Lundi</td>
                         <td class="cours" data-type="H">Développement Avancé <span class="cell-detail">KHEMAJA Maha | C | I-14 | H</span></td>
                         <td class="cours" data-type="H">Sécurité des réseaux <span class="cell-detail">MTIBAA Riadh | C | G19 | H</span></td>
-                        <td></td>
+                        <td class="tp" data-type="H">Développement Avancé <span class="cell-detail">MOATEMRI Maroua | TP | G16 | H</span></td>
                         <td class="pause">Pause</td>
-                        <td></td>
+                        <td class="tp" data-type="H">Développement Avancé <span class="cell-detail">MOATEMRI Maroua | TP | G16 | H</span></td>
                         <td class="tp stacked" colspan="2">
                             <div class="top" data-type="QB">IHM <span class="cell-detail">ABBES FERIEL | TP | G05 | QB</span></div>
-                            <div class="bottom" data-type="QA">Développement Web <span class="cell-detail">BEN AHMED Sofiene | TP | G01 | QA</span></div>
+                            <div class="bottom" data-type="QA">Développement Web <span class="cell-detail">BEN AHMED Sofiene | TP | G14 | QA</span></div>
                         </td>
                     </tr>
                     <!-- Mardi -->
@@ -355,7 +355,7 @@
                     <tr>
                         <td>Jeudi</td>
                         <td class="cours" data-type="QB">Middlewares <span class="cell-detail">JABLA Roua | C | G20 | QB</span></td>
-                        <td class="cours" data-type="H">Théorie Files <span class="cell-detail">ROUIS Moeiz | C | M02 | H</span></td>
+                        <td class="cours" data-type="H">Théorie Files <span class="cell-detail">ROUIS Moeiz | C | I-11 | H</span></td>
                         <td class="td" data-type="QA">Analyse Numérique <span class="cell-detail">ROUATBI Asma | TD | I-19 | QA</span></td>
                         <td class="pause">Pause</td>
                         <td class="cours" data-type="H">Français 3 <span class="cell-detail">HASSINE Hela | C | I-07 | H</span></td>
@@ -376,8 +376,8 @@
                     <tr>
                         <td>Samedi</td>
                         <td class="cours" data-type="H">IHM <span class="cell-detail">MAALEL Ahmed | C | K09 | H</span></td>
-                        <td></td>
-                        <td class="td" data-type="H">Théorie des Files d'attente <span class="cell-detail">ILJI Samia | TD | I-09 | H</span></td>
+                        <td class="cours" data-type="H">Comptabilité analytique <span class="cell-detail">HAMMAMI Souad | C | M16 | H</span></td>
+                        <td class="td" data-type="H">Théorie des Files d'attente <span class="cell-detail">ILJI Samia | TD | I-10 | H</span></td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -408,70 +408,70 @@
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>08-13/09</td>
+                        <td>08-14/09</td>
                         <td>A</td>
                         <td>-</td>
                         <td>M1</td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>15-20/09</td>
+                        <td>15-1/09</td>
                         <td>B</td>
                         <td>-</td>
                         <td>M1</td>
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>22-27/09</td>
+                        <td>22-28/09</td>
                         <td>A</td>
                         <td>-</td>
                         <td>M1</td>
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>29/09-4/10</td>
+                        <td>29/09-5/10</td>
                         <td>B</td>
                         <td>-</td>
                         <td>M1</td>
                     </tr>
                     <tr>
                         <td>5</td>
-                        <td>06-11/10</td>
+                        <td>06-12/10</td>
                         <td>A</td>
                         <td>-</td>
                         <td>M1</td>
                     </tr>
                     <tr>
                         <td>6</td>
-                        <td>13-18/10</td>
+                        <td>13-19/10</td>
                         <td>B</td>
                         <td>Z1</td>
                         <td>M1</td>
                     </tr>
                     <tr>
                         <td>7</td>
-                        <td>20-25/10</td>
+                        <td>20-26/10</td>
                         <td>A</td>
                         <td>Z2</td>
                         <td>M1</td>
                     </tr>
                     <tr>
                         <td>8</td>
-                        <td>27/10-1/11</td>
+                        <td>27/10-2/11</td>
                         <td>B</td>
                         <td>Z1</td>
                         <td>M2</td>
                     </tr>
                     <tr class="semestre-ds">
                         <td>9</td>
-                        <td>03-08/11</td>
+                        <td>03-09/11</td>
                         <td>Semaine des DS</td>
                         <td></td>
                         <td></td>
                     </tr>
                     <tr>
                         <td>10</td>
-                        <td>10-15/11</td>
+                        <td>10-16/11</td>
                         <td>A</td>
                         <td>Z2</td>
                         <td>M1</td>
