--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             background-color: #f9f9f9;
         }
         .semestre-ds {
-            background-color: var(--semaine-ds);
+            background-color: var(--semaine-ds) !important;
             color: white;
             font-weight: bold;
         }
@@ -464,20 +464,21 @@
                         <td>Z1</td>
                         <td>M2</td>
                     </tr>
-                    <tr class="semestre-ds">
+                    <tr >
                         <td>9</td>
                         <td>03-09/11</td>
+                        <td>A</td>
+                        <td>Z2</td>
+                        <td>M2</td>
+                    </tr>
+                    <tr class="semestre-ds">
+                        <td>10</td>
+                        <td>10-16/11</td>
                         <td>Semaine des DS</td>
                         <td></td>
                         <td></td>
                     </tr>
-                    <tr>
-                        <td>10</td>
-                        <td>10-16/11</td>
-                        <td>A</td>
-                        <td>Z2</td>
-                        <td>M1</td>
-                    </tr>
+
                     <tr>
                         <td>11</td>
                         <td>17-22/11</td>
